tests/machine/x/c/group_by_join.error
line: 0
error: cc error: exit status 1
/workspace/mochi/tests/machine/x/c/group_by_join.c: In function ‘main’:
/workspace/mochi/tests/machine/x/c/group_by_join.c:113:26: error: invalid initializer
  113 |   list_StatsItem stats = 0;
      |                          ^

   1: #include <stdio.h>
